--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
-<header style="position:fixed; top:0; left:0; width:100%; background:white; box-shadow:0 2px 4px rgba(0,0,0,0.05);">
-    <h1>Hi, I'm Nathan!</h1>
-    <h2>I do software engineering and programming.</h2>
-    <div style="position: absolute; top: 20px; right: 30px; text-align: right;">
-        <h4>Links to my other pages</h4>
-        <a href="https://github.com/bitNathan">Github</a><br>
-        <a href="https://www.linkedin.com/in/nathan-shawn-bitner/">LinkedIn</a>
-    </div>
-</header>
-
-<div style="height: 120px;"></div>
+<head>
+    <link rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
 <body>
-    <p> For now this is just my resume. It should get more interesting as I have time to further develop it.</p>
-    <!-- Resume section seperately scrollable -->
-    <object data="resume.html" type="text/html" width="50%" height="600px"></object>
+    <ul class = "navbar">
+        <li>
+            <h1>Hi, I'm Nathan!</h1>
+            <h2>I do software engineering and programming.</h2>
+        </li>
+        
+        <li style="font-size: 220%">
+            <a href="https://www.linkedin.com/in/nathan-shawn-bitner/"><i class = "fa fa-linkedin"></i></a>
+            <a href="https://github.com/bitNathan"><i class = "fa fa-github"> </i></a>
+        </li>
+            
+    </ul>
+
+    <!-- One div to center, one for card bg, then resume itself in iframe -->
+     <div class = "center">
+        <div class = "card-container">
+            <iframe src="resume.html" title = "Resume"></iframe>
+        </div>
+    </div>
+
+    <p class = "center">Contact me at nathan.shawnn@gmail.com</p>
 </body>
 
-<footer>
-    <p style="text-align: center;">Contact me at <code>nathan.shawnn@gmail.com</code>!</p>
-</footer>
 </html>
