--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 
 <h3><u>Skills</u></h3>
     <p><strong>Languages:</strong> Python, C, C++, JavaScript, Typescript,
-    SQL, Bash/shell scripting, HTML, CSS, SQL</p>
+    SQL, Bash/shell scripting, HTML, CSS</p>
     <p><strong>Software Development</strong> <strong>Tools:</strong> Git and
     GitHub, Docker, Linux</p>
     <p><strong>Project Management:</strong> Agile/scrum framework, CI/CD,
